--- a/_posts/.md
+++ b/_posts/.md
@@ -8,6 +8,7 @@ tags: [typography]
 pin: true
 math: true
 mermaid: true
+draft: true
 image:
   path: /commons/devices-mockup.png
   lqip: data:image/webp;base64,UklGRpoAAABXRUJQVlA4WAoAAAAQAAAADwAABwAAQUxQSDIAAAARL0AmbZurmr57yyIiqE8oiG0bejIYEQTgqiDA9vqnsUSI6H+oAERp2HZ65qP/VIAWAFZQOCBCAAAA8AEAnQEqEAAIAAVAfCWkAALp8sF8rgRgAP7o9FDvMCkMde9PK7euH5M1m6VWoDXf2FkP3BqV0ZYbO6NA/VFIAAAA
@@ -18,17 +19,23 @@ image:
 
 <!-- markdownlint-capture -->
 <!-- markdownlint-disable -->
+
 # H1 — heading
+
 {: .mt-4 .mb-0 }
 
 ## H2 — heading
+
 {: data-toc-skip='' .mt-4 .mb-0 }
 
 ### H3 — heading
+
 {: data-toc-skip='' .mt-4 .mb-0 }
 
 #### H4 — heading
+
 {: data-toc-skip='' .mt-4 }
+
 <!-- markdownlint-restore -->
 
 ## Paragraph
@@ -72,17 +79,19 @@ Moon
 
 <!-- markdownlint-capture -->
 <!-- markdownlint-disable -->
+
 > An example showing the `tip` type prompt.
-{: .prompt-tip }
+> {: .prompt-tip }
 
 > An example showing the `info` type prompt.
-{: .prompt-info }
+> {: .prompt-info }
 
 > An example showing the `warning` type prompt.
-{: .prompt-warning }
+> {: .prompt-warning }
 
 > An example showing the `danger` type prompt.
-{: .prompt-danger }
+> {: .prompt-danger }
+
 <!-- markdownlint-restore -->
 
 ## Tables
@@ -133,7 +142,8 @@ fi;
   "colors/light-typography",
   "colors/dark-typography";
 ```
-{: file='_sass/jekyll-theme-chirpy.scss'}
+
+{: file='\_sass/jekyll-theme-chirpy.scss'}
 
 ## Mathematics
 
