fix(typo): stduy -> study

--- a/_posts/2025-03-07-ejs-rce.md
+++ b/_posts/2025-03-07-ejs-rce.md
@@ -8,6 +8,16 @@ tags: [web, ejs, rce]
 pin: false
 ---
 
+## Before You Begin to Read
+
+I am writing this post to study both English and Hacking.
+
+Since English is not my first language, there might be some misunderstandings or incorrect expressions.
+
+If you notice any mistakes that could be improved, I would greatly appreciate your feedback. 
+
+> Thank you for reading!
+
 ## What is EJS?
 
 ---
